# pelatnas-ioai-2026

./: main.py  pyproject.toml
01/: main.ipynb  sample_submission.csv  submission.csv  test.csv  train.csv
02/: main.ipynb  sample_submission.csv  submission.csv  test.csv  train.csv
04/1/: main.ipynb  sample_submission.csv  submission.csv  test.csv  train.csv
04/2/: main.ipynb  sample_submission.csv  submission.csv  test.csv  train.csv
05/: main.ipynb  sample_submission.csv  submission.csv  test.csv  train.csv
06/: main.ipynb  model-loselen.joblib  test.csv  train.csv
07/: main.py
08/: main.ipynb
09/: main.ipynb  sandbox_sub.csv  submission.csv
10/: main.ipynb  sample_submission.csv  submission.csv  test.csv  train.csv
10/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
10/catboost_info/learn/: events.out.tfevents
